# browser

./: .gclient  .gclient_entries  .gclient_previous_custom_vars  .gclient_previous_sync_commits  .gitignore  LICENSE  README.md
src/android_webview/tools/adblock_shell/: AndroidManifest.xml  BUILD.gn
src/chrome/browser/adblock/android/: BUILD.gn  README.md  adblock_strings.grd
src/components/adblock/: BUILD.gn  CHANGELOG.md  README.md  adblock.mojom  adblock_constants.cc  adblock_constants.h  adblock_content_type.h  adblock_controller.h  adblock_controller_impl.cc  adblock_controller_impl.h  adblock_controller_impl_test.cc  adblock_element_hider.h  adblock_element_hider_impl.cc  adblock_element_hider_impl.h  adblock_filesystem_impl.cc  adblock_filesystem_impl.h  adblock_filesystem_impl_test.cc  adblock_frame_hierarchy_builder.cc  adblock_frame_hierarchy_builder.h  adblock_frame_hierarchy_builder_test.cc  adblock_logging_impl.cc  adblock_logging_impl.h  adblock_network_impl.cc  adblock_network_impl.h  adblock_network_impl_test.cc  adblock_platform_embedder.cc  adblock_platform_embedder.h  adblock_platform_embedder_impl.cc  adblock_platform_embedder_impl.h  adblock_platform_embedder_impl_test.cc  adblock_prefs.cc  adblock_prefs.h  adblock_request_classifier.h  adblock_request_classifier_libabp_impl.cc  adblock_request_classifier_libabp_impl.h  adblock_request_classifier_libabp_impl_test.cc  adblock_resource_reader_impl.cc  adblock_resource_reader_impl.h  adblock_sitekey_storage.h  adblock_sitekey_storage_libabp_impl.cc  (+40 more)
src/components/adblock/android/: BUILD.gn  adblock_controller_jni.cc  adblock_strings.grd  filtering_configuration_android.cc  filtering_configuration_android.h  resource_classification_notifier_android.cc  resource_classification_notifier_android.h
src/components/adblock/android/translations/: adblock_strings_am.xtb  adblock_strings_bn.xtb  adblock_strings_ca.xtb  adblock_strings_cs.xtb  adblock_strings_da.xtb  adblock_strings_en-GB.xtb  adblock_strings_es-419.xtb  adblock_strings_es.xtb  adblock_strings_et.xtb  adblock_strings_fi.xtb  adblock_strings_hi.xtb  adblock_strings_hu.xtb  adblock_strings_id.xtb  adblock_strings_it.xtb  adblock_strings_ko.xtb  adblock_strings_lv.xtb  adblock_strings_mk.xtb  adblock_strings_ms.xtb  adblock_strings_nl.xtb  adblock_strings_pt-BR.xtb  adblock_strings_pt-PT.xtb  adblock_strings_sk.xtb  adblock_strings_sw.xtb  adblock_strings_th.xtb  adblock_strings_tr.xtb  adblock_strings_vi.xtb  adblock_strings_zh-CN.xtb
src/components/adblock/content/: BUILD.gn
src/components/adblock/content/browser/: BUILD.gn  adblock_content_browser_client.h  adblock_content_utils.cc  adblock_content_utils.h  adblock_context_data.cc  adblock_context_data.h  adblock_filter_match.h  adblock_internals_page_handler.cc  adblock_internals_page_handler.h  adblock_internals_ui.cc  adblock_internals_ui.h  adblock_url_loader_factory.cc  adblock_url_loader_factory.h  adblock_url_loader_factory_for_test.cc  adblock_url_loader_factory_for_test.h  adblock_web_ui_controller_factory.cc  adblock_web_ui_controller_factory.h  adblock_webcontents_observer.cc  adblock_webcontents_observer.h  content_security_policy_injector.h  content_security_policy_injector_impl.cc  content_security_policy_injector_impl.h  element_hider.h  element_hider_impl.cc  element_hider_impl.h  element_hider_info.cc  element_hider_info.h  eyeo_document_info.cc  eyeo_document_info.h  eyeo_page_info.cc  eyeo_page_info.h  frame_hierarchy_builder.cc  frame_hierarchy_builder.h  frame_opener_info.cc  frame_opener_info.h  page_view_stats.cc  page_view_stats.h  request_initiator.cc  request_initiator.h  resource_classification_runner.h  (+4 more)
src/components/adblock/content/common/: BUILD.gn  adblock_url_loader_factory.cc  adblock_url_loader_factory.h
src/components/adblock/core/: BUILD.gn  activeping_telemetry_topic_provider.cc  activeping_telemetry_topic_provider.h  adblock_controller.h  adblock_controller_impl.cc  adblock_controller_impl.h  adblock_switches.cc  adblock_switches.h  adblock_telemetry_service.cc  adblock_telemetry_service.h  features.cc  features.gni  features.h  session_stats.h  sitekey_storage.h  sitekey_storage_impl.cc  sitekey_storage_impl.h
src/components/adblock/core/classifier/: BUILD.gn  resource_classifier.cc  resource_classifier.h  resource_classifier_impl.cc  resource_classifier_impl.h
src/components/adblock/core/common/: BUILD.gn  adblock_constants.cc  adblock_constants.h  adblock_prefs.cc  adblock_prefs.h  adblock_switches.cc  adblock_switches.h  adblock_utils.cc  adblock_utils.h  allowed_connection_type.cc  allowed_connection_type.h  app_info.cc  app_info.h  content_type.cc  content_type.h  converter_result.cc  converter_result.h  flatbuffer_data.cc  flatbuffer_data.h  header_filter_data.h  keyword_extractor_utils.cc  keyword_extractor_utils.h  regex_filter_pattern.cc  regex_filter_pattern.h  sitekey.h  task_scheduler.h  task_scheduler_impl.cc  task_scheduler_impl.h  web_ui_constants.cc  web_ui_constants.h
src/components/adblock/core/configuration/: BUILD.gn  filtering_configuration.h  persistent_filtering_configuration.cc  persistent_filtering_configuration.h
src/components/adblock/core/converter/: BUILD.gn  converter.cc  (+12 more)
src/components/adblock/docs/: design-overview.md  developer-notes.md  initialization-sequence.txt  integration-how-to.md
src/components/adblock_comparison/: BUILD.gn  libadblockplus_reference_database.cc  libadblockplus_reference_database.h  test_request_reader.cc  test_request_reader.h  verify_flatbuffer_adblocking.cc
src/components/eyeo_testing/: BUILD.gn  README.md  archive_with_deps.gni  archive_with_deps.py  benchmark_utils.cc  benchmark_utils.h  classification_benchmark.cc  element_hiding_benchmark.cc  eyeometry_test_server.cc  libadblockplus_reference_database.cc  libadblockplus_reference_database.h  test_request_reader.cc  test_request_reader.h  verify_flatbuffer_adblocking.cc
src/components/resources/adblocking/: BUILD.gn  anticv.txt  easylist.txt  elemhide.js  elemhide_for_selector.jst  elemhideemu.jst  exceptionrules.txt  update.sh
(+2290 files in other folders)
