#
# This file is part of eyeo Chromium SDK,
# Copyright (C) 2006-present eyeo GmbH
#
# eyeo Chromium SDK is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.
#
# eyeo Chromium SDK is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with eyeo Chromium SDK.  If not, see <http://www.gnu.org/licenses/>.

import("//build/config/features.gni")

group("unit_tests") {
  testonly = true

  deps = [
    "//components/adblock/core:unit_tests",
    "//components/adblock/core/classifier:unit_tests",
    "//components/adblock/core/common:unit_tests",
    "//components/adblock/core/configuration:unit_tests",
    "//components/adblock/core/converter/parser:unit_tests",
    "//components/adblock/core/converter/serializer:unit_tests",
    "//components/adblock/core/net:unit_tests",
    "//components/adblock/core/subscription:unit_tests",
  ]

  if (use_blink) {
    deps += [ "//components/adblock/content/browser:unit_tests" ]
  }
}
