#
# This file is part of eyeo Chromium SDK,
# Copyright (C) 2006-present eyeo GmbH
#
# eyeo Chromium SDK is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.
#
# eyeo Chromium SDK is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with eyeo Chromium SDK.  If not, see <http://www.gnu.org/licenses/>.

import("//build/symlink.gni")

source_set("test_support") {
  testonly = true

  sources = [
    "libadblockplus_reference_database.cc",
    "libadblockplus_reference_database.h",
    "test_request_reader.cc",
    "test_request_reader.h",
  ]
  public_deps = [
    "//base",
    "//base/test:test_support",
    "//net:net",
    "//sql",
    "//ui/base:base",
    "//url",
  ]
}

executable("verify_flatbuffer_adblocking") {
  testonly = true

  sources = [ "verify_flatbuffer_adblocking.cc" ]

  public_deps = [
    ":test_support",
    "//components/adblock/core:core",
  ]
}
