#
# This file is part of eyeo Chromium SDK,
# Copyright (C) 2006-present eyeo GmbH
#
# eyeo Chromium SDK is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.
#
# eyeo Chromium SDK is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with eyeo Chromium SDK.  If not, see <http://www.gnu.org/licenses/>.

assert(!is_ios)

import("//components/adblock/core/features.gni")

# External targets should depend on this
group("browser") {
  public_deps = [ "//components/adblock/content/browser:browser_impl" ]
}

# External targets should depend on this
group("common") {
  public_deps = [
    "//components/adblock/content/common:common_impl",
    "//components/adblock/content/common/mojom:adblock_interfaces",
  ]
}
